--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   font_awesome_flutter: ^10.1.0
   flutter_screenutil: ^5.3.1
   get_storage: ^2.0.3
+  flutter_easyloading: ^3.0.5
   connectivity_plus: ^2.2.0
   form_field_validator: ^1.0.1
   cupertino_icons: 1.0.4
@@ -95,17 +96,39 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Graphik
+      fonts:
+        - asset: font/Graphik-Bold.otf
+          weight: 700
+        - asset: font/Graphik-Regular.ttf
+          weight: 400
+        - asset: font/Graphik-BoldItalic.otf
+          weight: 700
+          style: italic
+        - asset: font/Graphik-Light.otf
+          weight: 300
+        - asset: font/Graphik-LightItalic.otf
+          weight: 300
+          style: italic
+        - asset: font/Graphik-Medium.otf
+          weight: 500
+        - asset: font/Graphik-MediumItalic.otf
+          weight: 500
+          style: italic
+        - asset: font/Graphik-RegularItalic.otf
+          weight: 400
+          style: italic
+        - asset: font/Graphik-Semibold.otf
+          weight: 600
+        - asset: font/Graphik-SemiboldItalic.otf
+          weight: 600
+          style: italic
+    - family: MTSans
+      fonts:
+        - asset: font/MTSans-Regular.otf
+          weight: 400
+
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
