--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   cupertino_icons: 1.0.4
   shared_preferences: 2.0.9
   dio: 4.0.4
+  flutter_svg: ^1.1.5
   intl: 0.17.0
   connectivity: 3.0.6
   logger: 1.1.0
@@ -55,6 +56,8 @@ dependencies:
   fluttertoast: 8.0.8
   loader_overlay: ^2.0.7
   url_strategy: ^0.2.0
+  firebase_auth: ^4.2.3
+  firebase_core: ^2.4.0
 
 dev_dependencies:
   flutter_test:
@@ -83,6 +86,7 @@ flutter:
     # To add assets to your application, add an assets section, like this:
   assets:
     - assets/image/
+    - assets/svg/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
