--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   url_strategy: ^0.2.0
   firebase_auth: ^4.2.3
   firebase_core: ^2.4.0
+  cloud_firestore: ^4.3.1
 
 dev_dependencies:
   flutter_test:
