remove email and password

--- a/android/local.properties
+++ b/android/local.properties
@@ -1,4 +1,4 @@
-sdk.dir=C:/Users/Devanshi.patel/AppData/Local/Android/Sdk
+sdk.dir=C:\\Users\\Devanshi.patel\\AppData\\Local\\Android\\Sdk
 flutter.sdk=D:\\flutter_sdk\\flutter_sdk_3.3.8\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
