--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   intl: 0.17.0
   connectivity: 3.0.6
   logger: 1.1.0
+  url_launcher: ^6.1.7
   permission_handler: 9.2.0
   app_settings: 4.1.6
   fluttertoast: 8.0.8
@@ -58,6 +59,7 @@ dependencies:
   url_strategy: ^0.2.0
   firebase_auth: ^4.2.3
   firebase_core: ^2.4.0
+  url_launcher_android: ^6.0.22
   cloud_firestore: ^4.3.1
 
 dev_dependencies:
