--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -70,6 +70,7 @@ flutter {
 
 dependencies {
     implementation "com.android.support:multidex:1.0.3"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+//    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation platform('com.google.firebase:firebase-bom:30.2.0')
 }
