--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\Users\\Devanshi.patel\\AppData\\Local\\Android\\Sdk
+sdk.dir=C:/Users/Devanshi.patel/AppData/Local/Android/Sdk
 flutter.sdk=D:\\flutter_sdk\\flutter_sdk_3.3.8\\flutter
-flutter.buildMode=release
+flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
